PDF Directory and Viewer
Added PDF Directory Feature

--- a/filestore/templates/pdf_dir.html
+++ b/filestore/templates/pdf_dir.html
@@ -5,7 +5,9 @@
 {% block content %}
 
 <div class="container-fluid">
-	
+	{% for item in storage%}
+		<a href="{{ url_for('filestore.show_file', pdf_id = item.file_id) }}" target="_blank">{{ item.filename }}</a>
+	{% endfor %}
 </div>
 
 {% endblock %}
