--- a/filestore/templates/pdftemplate.html
+++ b/filestore/templates/pdftemplate.html
@@ -101,7 +101,7 @@
 						<a class="nav-link" href="{{ url_for('filestore.dir') }}">PDF Library</a>
 					</li>
 				</ul>
-				<form class="form-inline my-2 my-lg-0" action="{{ url_for('views.searchrecord') }}" method="POST">
+				<form class="form-inline my-2 my-lg-0" action="{{ url_for('filestore.searchfile') }}" method="POST">
 					<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="search">
 					<button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
 				</form>
