--- a/filestore/templates/upload_form.html
+++ b/filestore/templates/upload_form.html
@@ -6,7 +6,7 @@
 
 <h2>Upload PDF</h2>
 <form action="{{ url_for('filestore.file_upload') }}" method="post" enctype="multipart/form-data">
-    <input type="file" name="pdf">
+    <input type="file" name="pdf" required>
     <input type="submit" value="Upload">
 </form>
 
