Custom Age Reporting (0 to 9 years))
Separate case ageing for Civil, Criminal, and CICL Cases for for faster counting

--- a/templates/template.html
+++ b/templates/template.html
@@ -87,6 +87,9 @@
 							<a class="dropdown-item" href="{{ url_for('reports.report_ageing_10years_up') }}" target="_blank">More than 10 years</a>
 						</div>
 					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{ url_for('reports.custom') }}">Custom Ageing</a>
+					</li>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						Counting of Active Cases
